--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flexi-table",
+  "name": "zenx-table",
   "version": "0.0.1",
   "description": "Basic html table in react",
   "main": "./src/index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akshat31/flexi-table.git"
+    "url": "git+https://github.com/akshat31/zenx-table.git"
   },
   "keywords": [
     "Table"
@@ -16,9 +16,9 @@
   "author": "Akshat Soni",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/akshat31/flexi-table/issues"
+    "url": "https://github.com/akshat31/zenx-table/issues"
   },
-  "homepage": "https://github.com/akshat31/flexi-table#readme",
+  "homepage": "https://github.com/akshat31/zenx-table#readme",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
