--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "zenx-table",
+  "private":"false",
   "version": "0.0.4",
   "description": "Basic html table in react",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "scripts": {
