--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zenx-table",
   "version": "0.0.4",
+  "private": "false",
   "description": "Basic html table in react",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
